--- a/src/index.scss
+++ b/src/index.scss
@@ -61,6 +61,10 @@ a{
         background: #fff;
         text-align: center;
         padding: 1.875rem .9375rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
         img {
             width: 6.25rem;
             height: 6.25 rem;
